--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "errors",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Error types",
   "main": "index.js",
   "scripts": {
+    "doc": "jsdoc -c ./.jsdoc.json ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,5 +12,8 @@
     "url": "git@git.kaktus.cc:shared/errors.git"
   },
   "author": "Arttu Manninen <arttu@kaktus.cc>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jsdoc": "^4.0.0"
+  }
 }
